# meerkat

./: .gitignore  README.md  bun.lockb  docker-compose.yml  package.json
docker/: docker-compose.yml
prisma/: schema.prisma
signaling-server/: Dockerfile  bun.lockb  package.json  tsconfig.json
signaling-server/src/: server.ts
src/: env.js
src/app/: layout.tsx  page.tsx
src/app/(landing)/: configure-meeting-modal.tsx  current-datetime.tsx  date-picker.tsx  landing.tsx  page.tsx
src/app/(main)/room/[uuid]/: RoomStatusManager.tsx  file-explorer.tsx  page.tsx  pending-meeting.tsx  room-client.tsx  user-cursors.tsx
src/app/_components/: configureMeetingModal.tsx
src/components/: home-ui.tsx
src/lib/generic-name-generator/: index.ts
src/lib/hooks/: use-collaborative-editor.tsx  use-collaborative-files.tsx  use-collaborative-terminal.tsx  use-name-generator.tsx
src/lib/mail/: mailer.ts  meeting-email.tsx
src/lib/room-name-generator/: adjectives.json  index.ts
src/server/api/: root.ts
src/server/api/routers/: generateName.ts  judge0.ts
src/server/api/routers/generic-name/: generic-name-procedure.ts  generic-name.service.ts
src/server/api/routers/judge0/: judge0.input.ts  judge0.procedure.ts  judge0.service.ts
src/types/: judge0.ts
websocket-server/: Cargo.toml  Dockerfile  package.json  tsconfig.json  typings.d.ts
websocket-server/migrations/: 20241211041031_create_room_table.sql
websocket-server/src/: callback.ts  config.rs  db.rs  dtos.rs  handlers.rs  index.ts  main.rs  models.rs  repositories.rs  utils.ts  websocket.rs
(+3 files in other folders)
