[package]
name = "websocket-server"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1.83"
axum = { version = "0.7.9", features = ["macros", "ws"] }
base64 = "0.22.1"
chrono = { version = "0.4.39", features = ["serde"] }
dotenv = "0.15.0"
futures = "0.3.31"
hyper = { version = "1.5.1", features = ["server"] }
serde = "1.0.216"
sqlx = { version = "0.8.2", features = ["chrono", "runtime-tokio-native-tls", "sqlite"] }
tokio = { version = "1.42.0", features = ["full"] }
tower-http = { version = "0.6.2", features = ["cors"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
validator = { version = "0.19.0", features = ["derive"] }
